Fixed whitespaces and minor inconsistencies.

--- a/editor/fmath/editor.css
+++ b/editor/fmath/editor.css
@@ -5,86 +5,95 @@
 }
 
 .ui-widget {
-	font-family: Arial,Helvetica,sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
 }
+
 .ui-tabs .ui-tabs-nav {
 	padding: 0;
 }
+
 .ui-tabs .ui-tabs-panel {
 	padding: 1px;
 }
+
 .ui-button {
-	padding: 0px;
+	padding: 0;
 	vertical-align: top;
 }
+
 select {
 	vertical-align: top;
 }
+
 .sp-replacer {
-	padding:1px;
+	padding: 1px;
 	vertical-align: top;
 }
+
 .sp-preview {
-	width:19px;
-	height:19px;
-}
-.ui-title {
-	padding:2px;
-	float: left;
-	width:99%;
-	margin:2px;
-	font-size:85%;
-}
-.ui-accordion .ui-accordion-header {
-	padding:2px;
-	text-align:left;
-	width:99%;
+	width: 19px;
+	height: 19px;
 }
 
-.ui-dialog{
-	z-index:1000 !important;
+.ui-title {
+	padding: 2px;
+	float: left;
+	width: 99%;
+	margin: 2px;
+	font-size: 85%;
+}
+
+.ui-accordion .ui-accordion-header {
+	padding: 2px;
+	text-align: left;
+	width: 99%;
+}
+
+.ui-dialog {
+	z-index: 1000 !important;
 }
 
 .ui-dialog .ui-dialog-titlebar {
-	padding:2px 15px;
+	padding: 2px 15px;
 }
 
 .CodeMirror {
 	height: auto;
 }
 
-.flyingInputText{
-	position:absolute;
-	top:0;
-	left:0;
-	z-index:1;
-	padding:0px !important;
-}
-input[type="radio"] {
-  margin-top: -1px;
-  vertical-align: middle;
+.flyingInputText {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	padding: 0 !important;
 }
 
-div[type="normalButton"]  {
-	padding: .4em 3em; 
+input[type="radio"] {
+	margin-top: -1px;
+	vertical-align: middle;
+}
+
+div[type="normalButton"] {
+	padding: .4em 3em;
 	vertical-align: middle;
 }
 
 .ui-accordion .ui-accordion-content {
-    	padding: 0  !important;
+	padding: 0 !important;
 }
 
-input[class="selectFontSize"]{
-	padding:3px !important;
+input[class="selectFontSize"] {
+	padding: 3px !important;
 }
 
-input{
-	padding:2px !important;
+input {
+	padding: 2px !important;
 }
 
-option{
-	padding: 0px !important;
-	margin: 0px !important;
+option {
+	padding: 0 !important;
+	margin: 0 !important;
 }
 
